--- a/styles/styles.css
+++ b/styles/styles.css
@@ -83,6 +83,9 @@ input[type=submit] {
     align-items: center;
     grid-row: 1 / 3;
     grid-column: 1/2;
+    max-width: 330px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .logo {
@@ -111,7 +114,7 @@ input[type=submit] {
     font-size: 16px;
     color: #19284A;
     height: 45px;
-    width: 330px;
+    width: 100%;
     border-radius: 4px;
     margin-bottom: 20px;
     padding: 18px;
@@ -151,23 +154,18 @@ input[type=submit] {
     font-family: 'Oswald';
     font-weight: 300;
     font-size: 16px;
-    line-height: 40px;
     color: #FFF;
     width: 100%;
     background-color: #F063A7;
     border-radius: 4px;
     margin-bottom: 32px;
-    height: 40px;
     padding: 11px;
     align-items: center;
+    word-wrap: break-word;
 }
 
 .snack-text {
     padding-left: 11px;
-}
-
-.password-toggle {
-    height: 18px;
 }
 
 .container-eye {
@@ -176,6 +174,7 @@ position: relative
 
 .pw-eye {
 position: absolute;
+height: 18px;
 right : 18px;
 top: 13px;
 } 
@@ -184,4 +183,4 @@ top: 13px;
     position: absolute;
     bottom: 10px;
     right: 10px;
-}
+}*/
