--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -1,27 +1,19 @@
 /* catamaran-regular - latin */
 @font-face {
-    font-family: 'Catamaran';
-    font-style: normal;
-    font-weight: 400;
-    src: url('../assets/fonts/catamaran-v17-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../assets/fonts/catamaran-v17-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../assets/fonts/catamaran-v17-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../assets/fonts/catamaran-v17-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../assets/fonts/catamaran-v17-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../assets/fonts/catamaran-v17-latin-regular.svg#Catamaran') format('svg'); /* Legacy iOS */
-  }
+  src:
+    url('../assets/fonts/catamaran/catamaran-regular.woff2') format('woff2'), 
+    url('../assets/fonts/catamaran/catamaran-regular.woff') format('woff');
+  font-family: 'Catamaran';
+  font-style: normal;
+  font-weight: 400;
+}
 
-  /* oswald-regular - latin */
+/* oswald-regular - latin */
 @font-face {
-    font-family: 'Oswald';
-    font-style: normal;
-    font-weight: 400;
-    src: url('..assets/fonts/oswald-v49-latin-regular.eot'); /* IE9 Compat Modes */
-    src: local(''),
-         url('../assets/fonts/oswald-v49-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-         url('../assets/fonts/oswald-v49-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
-         url('../assets/fonts/oswald-v49-latin-regular.woff') format('woff'), /* Modern Browsers */
-         url('../assets/fonts/oswald-v49-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
-         url('../assets/fonts/oswald-v49-latin-regular.svg#Oswald') format('svg'); /* Legacy iOS */
-  }
+  src:
+    url('../assets/fonts/oswald/oswald-regular.woff2') format('woff2'), 
+    url('../assets/fonts/oswald/oswald-regular.woff') format('woff');
+  font-family: 'Oswald';
+  font-style: normal;
+  font-weight: 400;
+}
