--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,20 +1,23 @@
 @import url(fonts.css);
 
 /* colors */
-.white-text {
-    color: #FFF;
+:root {
+    --white: #fff;
+    --pink: #F063A7;
+    --blue: #19284A;
+    --transitionTime: .2s;
 }
 
 .white-background {
-    background-color: #FFF;
+    background-color: var(--white);
 }
 
 .pink-text {
-    color: #F063A7;
+    color: var(--pink);
 }
 
 .pink-background {
-    background-color: #F063A7;
+    background-color: var(--pink);
 }
 
 /* elements */
@@ -24,37 +27,19 @@ h2 {
     font-size: 20px;
 }
 
-label {
-    font-family: Catamaran;
-    font-weight: 700;
+.link {
+    text-decoration: underline;
+    transition: color .2s;
+}
+
+link:hover,
+link:focus-visible {
+    color: var(--blue)
+}
+
+
+.link--small {
     font-size: 12px;
-    margin-bottom: 5px;
-    /* margin-top: 20px; */
-}
-
-a {
-    font-family: Oswald;
-    font-size: 12px;
-}
-
-button,
-input[type=submit] {
-    border-radius: 4px;
-    font-family: Oswald;
-    font-size: 16px;
-    border: none;
-    height: 45px;
-    width: 107px;
-}
-
-.pink-button {
-    background-color: #F063A7;
-    color: #FFF;
-}
-
-.pink-button:hover {
-    background-color: #FFF;
-    color: #19284A;
 }
 
 /* classes */
@@ -71,9 +56,9 @@ input[type=submit] {
 }
 
 .grid-item-right {
-    background: #19284A;
     display: grid;
     grid-template-rows: 9fr 1fr;
+    background: #19284A;
 }
 
 .flex-container {
@@ -97,38 +82,34 @@ input[type=submit] {
     display: flex;
     justify-content: flex-end;
     align-items: flex-end;
-    margin-right: 15px;
-    margin-bottom: 17px;
     grid-column: 1/2;
     grid-row: 2/3;
+    margin-right: 15px;
+    margin-bottom: 17px;
+}
+
+.bottom-right .link {
+    color: #fff;
 }
 
 .subtext {
-    font-family: Oswald;
     font-size: 8px;
     font-weight: 300;
 }
 
 .input-text {
-    font-family: Oswald;
-    font-size: 16px;
-    color: #19284A;
     height: 45px;
     width: 100%;
-    border-radius: 4px;
-    margin-bottom: 20px;
     padding: 18px;
+    margin-bottom: 20px;
     border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    color: #19284A;
 }
 
 .input-text::placeholder {
     color: #C2CADD;
-}
-
-.align-left {
-    flex-direction: column;
-    display: flex;
-    justify-content: left;
 }
 
 .align-right {
@@ -150,18 +131,20 @@ input[type=submit] {
 }
 
 .snackbar {
-    display: none;
-    font-family: 'Oswald';
-    font-weight: 300;
-    font-size: 16px;
-    color: #FFF;
+    display: flex;
+    align-items: center;
     width: 100%;
-    background-color: #F063A7;
-    border-radius: 4px;
     margin-bottom: 32px;
     padding: 11px;
-    align-items: center;
-    word-wrap: break-word;
+    border-radius: 4px;
+    font-size: 16px;
+    font-weight: 300;
+    background-color: var(--pink);
+    color: var(--white);
+}
+
+.snackbar[aria-hidden=true] {
+    display: none;
 }
 
 .snack-text {
@@ -169,18 +152,18 @@ input[type=submit] {
 }
 
 .container-eye {
-position: relative
+    position: relative
 }
 
 .pw-eye {
-position: absolute;
-height: 18px;
-right : 18px;
-top: 13px;
+    position: absolute;
+    top: 13px;
+    right : 18px;
+    display: block;
+    height: 18px;
+    cursor: pointer;
 } 
 
-/* .bottom-right{
-    position: absolute;
-    bottom: 10px;
-    right: 10px;
-}*/
+.pw-eye[aria-hidden=true] {
+    display: none;
+}
