--- a/styles/reset.css
+++ b/styles/reset.css
@@ -55,10 +55,10 @@ table {
 	border-spacing: 0;
 }
 
-html {
-	/* 1rem = 10px*/
-	/* font-size: 0.625; */
-}
+/* html {
+	1rem = 10px
+	font-size: 0.625;
+} */
 
 body {
 	line-height: 1;
@@ -69,4 +69,8 @@ body {
 a {
 	text-decoration: none;
 	color: inherit;
+}
+
+input {
+	font-family: inherit;
 }
